added d3 graph for user

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <title>Github Scout</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+   
+
   </head>
   <body>
   	<div>
@@ -20,12 +22,8 @@
       <input type ='text' value = 'enter language'/>
     </form>
     {{stats}}
-    <!-- // <script src = "./users/users.js"></script> -->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="lib/angular/angular.js"></script>
-    <script src="lib/angular-route/angular-route.js"></script>
-    <h1>GitHub User {{search}} Commits Over Time</h1>
-    <div linear-chart chart-data="salesData"></div>
+
+
     </div>
 
 
@@ -36,14 +34,12 @@
     	<p>Built in 2014 at Hack Reactor</p>
     	<p>Built by <a href="">Charles Wang</a>, <a href="">Mike Lamm</a>, <a href="">Wai-Yin Kwan</a>, <a href="">Kelly Walker</a>, and <a href="">Ben Rowles</a>.</p>
     </footer>
-
-  	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  	<!-- // <script src="lib/angular/lib/angular.js"></script> -->
-  	<script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-    <!-- // <script src="home/home.js"></script> -->
-    <!-- // <script src="language/language.js"></script> -->
+    
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-route/angular-route.js"></script>
     <script src="user/user.js"></script>
-  	<!-- // <script src="client.js"></script> -->
+     <script src ="app.js"></script>
   </body>
  </html>
 
