--- a/client/user/user.html
+++ b/client/user/user.html
@@ -7,5 +7,8 @@
     <input type='submit' value='search users' />
     <input type ='text' value='enter user'/>
   </form>
-  {{stats}}
+   <h1>GitHub User {{search}} Commits Over Time</h1>
+    <div linear-chart chart-data="salesData"></div>
+
+
 </div>
