Added some nvd3 additions

--- a/client/user/user.html
+++ b/client/user/user.html
@@ -13,3 +13,17 @@
      <div userlangauge-chart chart-data="UsercommitData"></div>
 
 </div>
+
+<div ng-controller="ExampleCtrl">
+	<nvd3-multi-bar-chart
+    	data="exampleData"
+        id="colorExample"
+        width="550"
+        height="300"
+        showXAxis="true"
+        showYAxis="true"
+        xAxisTickFormat="xAxisTickFormatFunction()"
+        color="colorFunction()">
+        	<svg></svg>
+    </nvd3-multi-bar-chart>
+</div>
