--- a/client/user/user.html
+++ b/client/user/user.html
@@ -1,29 +1,11 @@
-<div>
-
-  <!--    ({{userdata.data}}
- -->
-
+<div ng-controller="UserController">
   <h1>User View</h1>
   <form ng-submit='submitUsername(search)'>
     <!-- <input type='submit' value='search users' > -->
- 
+    <input name='search' class='search' placeholder='search for a user' ng-model='search.username'>
+    ({{userdata.data}}
      <h1>GitHub User {{search.username}} Commits Over Time</h1>
     <div usercommit-chart chart-data="UsercommitData"></div>
     <h1>GitHub User {{search.username}} Commits By Langauges</h1>
      <div userlangauge-chart chart-data="UsercommitData"></div>
-
-</div>
-
-<div ng-controller="ExampleCtrl">
-	<nvd3-multi-bar-chart
-    	data="exampleData"
-        id="colorExample"
-        width="550"
-        height="300"
-        showXAxis="true"
-        showYAxis="true"
-        xAxisTickFormat="xAxisTickFormatFunction()"
-        color="colorFunction()">
-        	<svg></svg>
-    </nvd3-multi-bar-chart>
 </div>
