--- a/client/user/user.html
+++ b/client/user/user.html
@@ -1,67 +1,64 @@
-<div>
-  <h1>User View</h1>
-  <h2>Compare another User</h2>
-  <form ng-submit='addUser();' ng-click="newDiv()" class='fx-fade-normal'>
-    <input type ='text' ng-model='userdata.nextUsername' placeholder = 'Enter username'>
-    <input type='submit' value='Search' >
-  </form>
+<div class="user">
+  <header class="one-whole clear-after">
+    <h1 class="float-left">Github Statistics for {{username}}</h1>
+    <div class="float-right">
+      <h3 class="float-left">Compare another User: </h3>
+      <form ng-submit='addUser();' ng-click="newDiv()" class='fx-fade-normal float-right'>
+        <input type ='text' ng-model='userdata.nextUsername' placeholder = 'Enter username'>
+        <input type='submit' value='Search' >
+      </form>
+    </div>
+  </header>
 
-  <h1>GitHub User Commits Over Time</h1>
-  <nvd3-multi-bar-chart
-             data="commitsbyDateData"
-             id="commitsbyDateDataId"
-             height="400"
-             showXAxis="true"
-             showYAxis="true"
-             showLegend="true"
-             rotateLabels="-45">
-        <svg></svg>
-    </nvd3-multi-bar-chart>
-     
- <h1><b>GitHub User {{username}} Commits By Langauges</b></h1>
-
-  <nvd3-pie-chart
-    data="commitsperLangugageData"
-    id="exampleId1"
-    x="xFunction()"
-    y="yFunction()"
-    width="500"
-    height="500"
-    showLabels="true"
-    pieLabelsOutside="true"
-    showValues="true"
-     >
-    <svg></svg>
-  </nvd3-pie-chart>
+  <div class="row">
+    <h2>GitHub User Commits Over Time</h2>
+    <nvd3-multi-bar-chart
+               data="commitsbyDateData"
+               id="commitsbyDateDataId"
+               height="400"
+               showXAxis="true"
+               showYAxis="true"
+               showLegend="true"
+               rotateLabels="-45">
+          <svg></svg>
+      </nvd3-multi-bar-chart>
+  </div>
 
 
- <h1><b>{{items.title}}</b></h1>
-<nvd3-pie-chart
-      data="commitsperLangugageDataUser2"
-      id="piechart2"
+  <div class="row">
+    <h2><b>GitHub User {{username}} Commits By Langauges</b></h2>
+
+    <nvd3-pie-chart
+      data="commitsperLangugageData"
+      id="exampleId1"
       x="xFunction()"
       y="yFunction()"
       width="500"
       height="500"
       showLabels="true"
       pieLabelsOutside="true"
-      labelType="key"
+      showValues="true"
        >
-      <svg ></svg>
+      <svg></svg>
     </nvd3-pie-chart>
+  </div>
 
-</div>
 
-<div ng-controller="ExampleCtrl">
-	<nvd3-multi-bar-chart
-    	data="exampleData"
-        id="colorExample"
-        width="550"
-        height="300"
-        showXAxis="true"
-        showYAxis="true"
-        xAxisTickFormat="xAxisTickFormatFunction()"
-        color="colorFunction()">
-        	<svg></svg>
-    </nvd3-multi-bar-chart>
+  <div class="row">
+    <h2><b>{{items.title}}</b></h2>
+    <nvd3-pie-chart
+        data="commitsperLangugageDataUser2"
+        id="piechart2"
+        x="xFunction()"
+        y="yFunction()"
+        width="500"
+        height="500"
+        showLabels="true"
+        pieLabelsOutside="true"
+        labelType="key"
+         >
+        <svg ></svg>
+      </nvd3-pie-chart>
+  </div>
+
 </div>
